# Feedback-Dashboard-project

./: README.md
online/: const.py  review_googleplay_initial.py  review_googleplay_main.py  review_googleplay_scrap.py  review_redis_common_insert.py  review_redis_common_insert_dto.py
online/common/: review_redis_common_flush.py  review_redis_common_insert.py
online/googlePlay/: review_googleplay_initial.py  review_googleplay_main.py  review_googleplay_scrap.py
online/googleplay/: review_googleplay_initial.py  review_googleplay_main.py  review_googleplay_scrap.py
ui/: pyproject.toml  stable.py
