[project]
name = "stockpeers"
version = "0.2.0"
description = "Stock peer analysis dashboard: easily compare stocks against others in their peer group"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "altair>=5.5.0",
    "pandas>=2.2.3",
    "redis>=7.0.0",
    "streamlit>=1.44.2",
    "streamlit-sortables>=0.3.1"
]
